# Stock-Prediction-With-Twitter

./: Analyst.py  README.md  Stock.py  TwitterBot.py  config.py  main.py  pyproject.toml  requirements.txt
Stock-Predictor/: Analyst.py  Stock.py  analysis.txt  main.py
