[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
npyscreen = "^4.10"
colorama = "^0.4.3"
termcolor = "^1.1"
sklearn = "^0.0.0"
yahoo-historical = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
